MAINS/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    CADENA
    FS_VAL
    IGUAL
    LETRAS_FIT
    LETRA_FDISK
    LETRA_MKDISK
    NUM

Grammar

Rule 0     S' -> comando
Rule 1     comando -> MKDISK atributosm
Rule 2     atributosm -> atributosm atributom
Rule 3     atributosm -> atributom
Rule 4     atributom -> GUION PATH DIR
Rule 5     atributom -> GUION FIT STRING
Rule 6     atributom -> GUION UNIT STRING
Rule 7     atributom -> GUION SIZE STRING
Rule 8     comando -> FDISK atributos
Rule 9     atributos -> atributos atributo
Rule 10    atributos -> atributo
Rule 11    atributo -> GUION PATH DIR
Rule 12    atributo -> GUION TYPE STRING
Rule 13    atributo -> GUION UNIT STRING
Rule 14    atributo -> GUION NAME STRING
Rule 15    atributo -> GUION SIZE STRING
Rule 16    atributo -> GUION FIT STRING
Rule 17    atributo -> GUION ADD STRING
Rule 18    atributo -> GUION DELETE
Rule 19    comando -> RMDISK GUION PATH DIR
Rule 20    comando -> MOUNT atributos_mount
Rule 21    atributos_mount -> atributos_mount atributo_mm
Rule 22    atributos_mount -> atributo_mm
Rule 23    atributo_mm -> GUION PATH DIR
Rule 24    atributo_mm -> GUION NAME STRING
Rule 25    comando -> UNMOUNT GUION ID STRING
Rule 26    comando -> MKFS atributos_mkfs
Rule 27    atributos_mkfs -> atributos_mkfs atributosSolo_mkfs
Rule 28    atributos_mkfs -> atributosSolo_mkfs
Rule 29    atributosSolo_mkfs -> GUION ID STRING
Rule 30    atributosSolo_mkfs -> GUION TYPE STRING
Rule 31    atributosSolo_mkfs -> GUION FS STRING
Rule 32    comando -> LOGIN atributos_login
Rule 33    atributos_login -> atributos_login atributosSolo_login
Rule 34    atributos_login -> atributosSolo_login
Rule 35    atributosSolo_login -> GUION USER STRING
Rule 36    atributosSolo_login -> GUION PASS STRING
Rule 37    atributosSolo_login -> GUION ID STRING
Rule 38    comando -> LOGOUT
Rule 39    comando -> MKGRP GUION NAME STRING
Rule 40    comando -> RMGRP GUION NAME STRING
Rule 41    comando -> MKUSR atributos_mkusr
Rule 42    atributos_mkusr -> atributos_mkusr atributosSolo_mkusr
Rule 43    atributos_mkusr -> atributosSolo_mkusr
Rule 44    atributosSolo_mkusr -> GUION USER STRING
Rule 45    atributosSolo_mkusr -> GUION PASS STRING
Rule 46    atributosSolo_mkusr -> GUION GRP STRING
Rule 47    comando -> RMUSR GUION NAME STRING
Rule 48    comando -> MKFILE atributos_mkfile
Rule 49    atributos_mkfile -> atributos_mkfile atributosSolo_mkfile
Rule 50    atributos_mkfile -> atributosSolo_mkfile
Rule 51    atributosSolo_mkfile -> GUION PATH DIR
Rule 52    atributosSolo_mkfile -> GUION SIZE STRING
Rule 53    atributosSolo_mkfile -> GUION CONT STRING
Rule 54    atributosSolo_mkfile -> GUION R
Rule 55    comando -> CAT listaFilesCAT
Rule 56    listaFilesCAT -> listaFilesCAT atributosSolo_CAT
Rule 57    listaFilesCAT -> atributosSolo_CAT
Rule 58    atributosSolo_CAT -> GUION FILE2 STRING
Rule 59    atributosSolo_CAT -> GUION FILE1 STRING
Rule 60    comando -> REMOVE GUION PATH DIR
Rule 61    comando -> EDIT listas_edit
Rule 62    listas_edit -> listas_edit atributosSolo_EDIT
Rule 63    listas_edit -> atributosSolo_EDIT
Rule 64    atributosSolo_EDIT -> GUION PATH DIR
Rule 65    atributosSolo_EDIT -> GUION CONT DIR
Rule 66    comando -> RENAME lista_rename
Rule 67    lista_rename -> lista_rename atributosSolo_RENAME
Rule 68    lista_rename -> atributosSolo_RENAME
Rule 69    atributosSolo_RENAME -> GUION PATH DIR
Rule 70    atributosSolo_RENAME -> GUION NAME STRING
Rule 71    comando -> MKDIR lista_mkdir
Rule 72    lista_mkdir -> lista_mkdir atributosSolo_MKDIR
Rule 73    lista_mkdir -> atributosSolo_MKDIR
Rule 74    atributosSolo_MKDIR -> GUION PATH DIR
Rule 75    atributosSolo_MKDIR -> GUION R
Rule 76    comando -> COPY lista_copy
Rule 77    lista_copy -> lista_copy atributosSolo_COPY
Rule 78    lista_copy -> atributosSolo_COPY
Rule 79    atributosSolo_COPY -> GUION PATH DIR
Rule 80    atributosSolo_COPY -> GUION DESTINO DIR
Rule 81    comando -> EXECUTE GUION PATH DIR
Rule 82    comando -> REP lista_rep
Rule 83    lista_rep -> lista_rep atributosSolo_REP
Rule 84    lista_rep -> atributosSolo_REP
Rule 85    atributosSolo_REP -> GUION ID STRING
Rule 86    atributosSolo_REP -> GUION PATH DIR
Rule 87    atributosSolo_REP -> GUION NAME STRING
Rule 88    atributosSolo_REP -> GUION RUTA DIR

Terminals, with rules where they appear

ADD                  : 17
CADENA               : 
CAT                  : 55
CONT                 : 53 65
COPY                 : 76
DELETE               : 18
DESTINO              : 80
DIR                  : 4 11 19 23 51 60 64 65 69 74 79 80 81 86 88
EDIT                 : 61
EXECUTE              : 81
FDISK                : 8
FILE1                : 59
FILE2                : 58
FIT                  : 5 16
FS                   : 31
FS_VAL               : 
GRP                  : 46
GUION                : 4 5 6 7 11 12 13 14 15 16 17 18 19 23 24 25 29 30 31 35 36 37 39 40 44 45 46 47 51 52 53 54 58 59 60 64 65 69 70 74 75 79 80 81 85 86 87 88
ID                   : 25 29 37 85
IGUAL                : 
LETRAS_FIT           : 
LETRA_FDISK          : 
LETRA_MKDISK         : 
LOGIN                : 32
LOGOUT               : 38
MKDIR                : 71
MKDISK               : 1
MKFILE               : 48
MKFS                 : 26
MKGRP                : 39
MKUSR                : 41
MOUNT                : 20
NAME                 : 14 24 39 40 47 70 87
NUM                  : 
PASS                 : 36 45
PATH                 : 4 11 19 23 51 60 64 69 74 79 81 86
R                    : 54 75
REMOVE               : 60
RENAME               : 66
REP                  : 82
RMDISK               : 19
RMGRP                : 40
RMUSR                : 47
RUTA                 : 88
SIZE                 : 7 15 52
STRING               : 5 6 7 12 13 14 15 16 17 24 25 29 30 31 35 36 37 39 40 44 45 46 47 52 53 58 59 70 85 87
TYPE                 : 12 30
UNIT                 : 6 13
UNMOUNT              : 25
USER                 : 35 44
error                : 

Nonterminals, with rules where they appear

atributo             : 9 10
atributo_mm          : 21 22
atributom            : 2 3
atributos            : 8 9
atributosSolo_CAT    : 56 57
atributosSolo_COPY   : 77 78
atributosSolo_EDIT   : 62 63
atributosSolo_MKDIR  : 72 73
atributosSolo_RENAME : 67 68
atributosSolo_REP    : 83 84
atributosSolo_login  : 33 34
atributosSolo_mkfile : 49 50
atributosSolo_mkfs   : 27 28
atributosSolo_mkusr  : 42 43
atributos_login      : 32 33
atributos_mkfile     : 48 49
atributos_mkfs       : 26 27
atributos_mkusr      : 41 42
atributos_mount      : 20 21
atributosm           : 1 2
comando              : 0
listaFilesCAT        : 55 56
lista_copy           : 76 77
lista_mkdir          : 71 72
lista_rename         : 66 67
lista_rep            : 82 83
listas_edit          : 61 62

Parsing method: LALR

state 0

    (0) S' -> . comando
    (1) comando -> . MKDISK atributosm
    (8) comando -> . FDISK atributos
    (19) comando -> . RMDISK GUION PATH DIR
    (20) comando -> . MOUNT atributos_mount
    (25) comando -> . UNMOUNT GUION ID STRING
    (26) comando -> . MKFS atributos_mkfs
    (32) comando -> . LOGIN atributos_login
    (38) comando -> . LOGOUT
    (39) comando -> . MKGRP GUION NAME STRING
    (40) comando -> . RMGRP GUION NAME STRING
    (41) comando -> . MKUSR atributos_mkusr
    (47) comando -> . RMUSR GUION NAME STRING
    (48) comando -> . MKFILE atributos_mkfile
    (55) comando -> . CAT listaFilesCAT
    (60) comando -> . REMOVE GUION PATH DIR
    (61) comando -> . EDIT listas_edit
    (66) comando -> . RENAME lista_rename
    (71) comando -> . MKDIR lista_mkdir
    (76) comando -> . COPY lista_copy
    (81) comando -> . EXECUTE GUION PATH DIR
    (82) comando -> . REP lista_rep

    MKDISK          shift and go to state 2
    FDISK           shift and go to state 3
    RMDISK          shift and go to state 4
    MOUNT           shift and go to state 5
    UNMOUNT         shift and go to state 6
    MKFS            shift and go to state 7
    LOGIN           shift and go to state 8
    LOGOUT          shift and go to state 9
    MKGRP           shift and go to state 10
    RMGRP           shift and go to state 11
    MKUSR           shift and go to state 12
    RMUSR           shift and go to state 13
    MKFILE          shift and go to state 14
    CAT             shift and go to state 15
    REMOVE          shift and go to state 16
    EDIT            shift and go to state 17
    RENAME          shift and go to state 18
    MKDIR           shift and go to state 19
    COPY            shift and go to state 20
    EXECUTE         shift and go to state 21
    REP             shift and go to state 22

    comando                        shift and go to state 1

state 1

    (0) S' -> comando .



state 2

    (1) comando -> MKDISK . atributosm
    (2) atributosm -> . atributosm atributom
    (3) atributosm -> . atributom
    (4) atributom -> . GUION PATH DIR
    (5) atributom -> . GUION FIT STRING
    (6) atributom -> . GUION UNIT STRING
    (7) atributom -> . GUION SIZE STRING

    GUION           shift and go to state 25

    atributosm                     shift and go to state 23
    atributom                      shift and go to state 24

state 3

    (8) comando -> FDISK . atributos
    (9) atributos -> . atributos atributo
    (10) atributos -> . atributo
    (11) atributo -> . GUION PATH DIR
    (12) atributo -> . GUION TYPE STRING
    (13) atributo -> . GUION UNIT STRING
    (14) atributo -> . GUION NAME STRING
    (15) atributo -> . GUION SIZE STRING
    (16) atributo -> . GUION FIT STRING
    (17) atributo -> . GUION ADD STRING
    (18) atributo -> . GUION DELETE

    GUION           shift and go to state 28

    atributos                      shift and go to state 26
    atributo                       shift and go to state 27

state 4

    (19) comando -> RMDISK . GUION PATH DIR

    GUION           shift and go to state 29


state 5

    (20) comando -> MOUNT . atributos_mount
    (21) atributos_mount -> . atributos_mount atributo_mm
    (22) atributos_mount -> . atributo_mm
    (23) atributo_mm -> . GUION PATH DIR
    (24) atributo_mm -> . GUION NAME STRING

    GUION           shift and go to state 32

    atributos_mount                shift and go to state 30
    atributo_mm                    shift and go to state 31

state 6

    (25) comando -> UNMOUNT . GUION ID STRING

    GUION           shift and go to state 33


state 7

    (26) comando -> MKFS . atributos_mkfs
    (27) atributos_mkfs -> . atributos_mkfs atributosSolo_mkfs
    (28) atributos_mkfs -> . atributosSolo_mkfs
    (29) atributosSolo_mkfs -> . GUION ID STRING
    (30) atributosSolo_mkfs -> . GUION TYPE STRING
    (31) atributosSolo_mkfs -> . GUION FS STRING

    GUION           shift and go to state 36

    atributos_mkfs                 shift and go to state 34
    atributosSolo_mkfs             shift and go to state 35

state 8

    (32) comando -> LOGIN . atributos_login
    (33) atributos_login -> . atributos_login atributosSolo_login
    (34) atributos_login -> . atributosSolo_login
    (35) atributosSolo_login -> . GUION USER STRING
    (36) atributosSolo_login -> . GUION PASS STRING
    (37) atributosSolo_login -> . GUION ID STRING

    GUION           shift and go to state 39

    atributos_login                shift and go to state 37
    atributosSolo_login            shift and go to state 38

state 9

    (38) comando -> LOGOUT .

    $end            reduce using rule 38 (comando -> LOGOUT .)


state 10

    (39) comando -> MKGRP . GUION NAME STRING

    GUION           shift and go to state 40


state 11

    (40) comando -> RMGRP . GUION NAME STRING

    GUION           shift and go to state 41


state 12

    (41) comando -> MKUSR . atributos_mkusr
    (42) atributos_mkusr -> . atributos_mkusr atributosSolo_mkusr
    (43) atributos_mkusr -> . atributosSolo_mkusr
    (44) atributosSolo_mkusr -> . GUION USER STRING
    (45) atributosSolo_mkusr -> . GUION PASS STRING
    (46) atributosSolo_mkusr -> . GUION GRP STRING

    GUION           shift and go to state 44

    atributos_mkusr                shift and go to state 42
    atributosSolo_mkusr            shift and go to state 43

state 13

    (47) comando -> RMUSR . GUION NAME STRING

    GUION           shift and go to state 45


state 14

    (48) comando -> MKFILE . atributos_mkfile
    (49) atributos_mkfile -> . atributos_mkfile atributosSolo_mkfile
    (50) atributos_mkfile -> . atributosSolo_mkfile
    (51) atributosSolo_mkfile -> . GUION PATH DIR
    (52) atributosSolo_mkfile -> . GUION SIZE STRING
    (53) atributosSolo_mkfile -> . GUION CONT STRING
    (54) atributosSolo_mkfile -> . GUION R

    GUION           shift and go to state 48

    atributos_mkfile               shift and go to state 46
    atributosSolo_mkfile           shift and go to state 47

state 15

    (55) comando -> CAT . listaFilesCAT
    (56) listaFilesCAT -> . listaFilesCAT atributosSolo_CAT
    (57) listaFilesCAT -> . atributosSolo_CAT
    (58) atributosSolo_CAT -> . GUION FILE2 STRING
    (59) atributosSolo_CAT -> . GUION FILE1 STRING

    GUION           shift and go to state 51

    listaFilesCAT                  shift and go to state 49
    atributosSolo_CAT              shift and go to state 50

state 16

    (60) comando -> REMOVE . GUION PATH DIR

    GUION           shift and go to state 52


state 17

    (61) comando -> EDIT . listas_edit
    (62) listas_edit -> . listas_edit atributosSolo_EDIT
    (63) listas_edit -> . atributosSolo_EDIT
    (64) atributosSolo_EDIT -> . GUION PATH DIR
    (65) atributosSolo_EDIT -> . GUION CONT DIR

    GUION           shift and go to state 55

    listas_edit                    shift and go to state 53
    atributosSolo_EDIT             shift and go to state 54

state 18

    (66) comando -> RENAME . lista_rename
    (67) lista_rename -> . lista_rename atributosSolo_RENAME
    (68) lista_rename -> . atributosSolo_RENAME
    (69) atributosSolo_RENAME -> . GUION PATH DIR
    (70) atributosSolo_RENAME -> . GUION NAME STRING

    GUION           shift and go to state 58

    lista_rename                   shift and go to state 56
    atributosSolo_RENAME           shift and go to state 57

state 19

    (71) comando -> MKDIR . lista_mkdir
    (72) lista_mkdir -> . lista_mkdir atributosSolo_MKDIR
    (73) lista_mkdir -> . atributosSolo_MKDIR
    (74) atributosSolo_MKDIR -> . GUION PATH DIR
    (75) atributosSolo_MKDIR -> . GUION R

    GUION           shift and go to state 61

    lista_mkdir                    shift and go to state 59
    atributosSolo_MKDIR            shift and go to state 60

state 20

    (76) comando -> COPY . lista_copy
    (77) lista_copy -> . lista_copy atributosSolo_COPY
    (78) lista_copy -> . atributosSolo_COPY
    (79) atributosSolo_COPY -> . GUION PATH DIR
    (80) atributosSolo_COPY -> . GUION DESTINO DIR

    GUION           shift and go to state 64

    lista_copy                     shift and go to state 62
    atributosSolo_COPY             shift and go to state 63

state 21

    (81) comando -> EXECUTE . GUION PATH DIR

    GUION           shift and go to state 65


state 22

    (82) comando -> REP . lista_rep
    (83) lista_rep -> . lista_rep atributosSolo_REP
    (84) lista_rep -> . atributosSolo_REP
    (85) atributosSolo_REP -> . GUION ID STRING
    (86) atributosSolo_REP -> . GUION PATH DIR
    (87) atributosSolo_REP -> . GUION NAME STRING
    (88) atributosSolo_REP -> . GUION RUTA DIR

    GUION           shift and go to state 68

    lista_rep                      shift and go to state 66
    atributosSolo_REP              shift and go to state 67

state 23

    (1) comando -> MKDISK atributosm .
    (2) atributosm -> atributosm . atributom
    (4) atributom -> . GUION PATH DIR
    (5) atributom -> . GUION FIT STRING
    (6) atributom -> . GUION UNIT STRING
    (7) atributom -> . GUION SIZE STRING

    $end            reduce using rule 1 (comando -> MKDISK atributosm .)
    GUION           shift and go to state 25

    atributom                      shift and go to state 69

state 24

    (3) atributosm -> atributom .

    GUION           reduce using rule 3 (atributosm -> atributom .)
    $end            reduce using rule 3 (atributosm -> atributom .)


state 25

    (4) atributom -> GUION . PATH DIR
    (5) atributom -> GUION . FIT STRING
    (6) atributom -> GUION . UNIT STRING
    (7) atributom -> GUION . SIZE STRING

    PATH            shift and go to state 70
    FIT             shift and go to state 71
    UNIT            shift and go to state 72
    SIZE            shift and go to state 73


state 26

    (8) comando -> FDISK atributos .
    (9) atributos -> atributos . atributo
    (11) atributo -> . GUION PATH DIR
    (12) atributo -> . GUION TYPE STRING
    (13) atributo -> . GUION UNIT STRING
    (14) atributo -> . GUION NAME STRING
    (15) atributo -> . GUION SIZE STRING
    (16) atributo -> . GUION FIT STRING
    (17) atributo -> . GUION ADD STRING
    (18) atributo -> . GUION DELETE

    $end            reduce using rule 8 (comando -> FDISK atributos .)
    GUION           shift and go to state 28

    atributo                       shift and go to state 74

state 27

    (10) atributos -> atributo .

    GUION           reduce using rule 10 (atributos -> atributo .)
    $end            reduce using rule 10 (atributos -> atributo .)


state 28

    (11) atributo -> GUION . PATH DIR
    (12) atributo -> GUION . TYPE STRING
    (13) atributo -> GUION . UNIT STRING
    (14) atributo -> GUION . NAME STRING
    (15) atributo -> GUION . SIZE STRING
    (16) atributo -> GUION . FIT STRING
    (17) atributo -> GUION . ADD STRING
    (18) atributo -> GUION . DELETE

    PATH            shift and go to state 75
    TYPE            shift and go to state 76
    UNIT            shift and go to state 77
    NAME            shift and go to state 78
    SIZE            shift and go to state 79
    FIT             shift and go to state 80
    ADD             shift and go to state 81
    DELETE          shift and go to state 82


state 29

    (19) comando -> RMDISK GUION . PATH DIR

    PATH            shift and go to state 83


state 30

    (20) comando -> MOUNT atributos_mount .
    (21) atributos_mount -> atributos_mount . atributo_mm
    (23) atributo_mm -> . GUION PATH DIR
    (24) atributo_mm -> . GUION NAME STRING

    $end            reduce using rule 20 (comando -> MOUNT atributos_mount .)
    GUION           shift and go to state 32

    atributo_mm                    shift and go to state 84

state 31

    (22) atributos_mount -> atributo_mm .

    GUION           reduce using rule 22 (atributos_mount -> atributo_mm .)
    $end            reduce using rule 22 (atributos_mount -> atributo_mm .)


state 32

    (23) atributo_mm -> GUION . PATH DIR
    (24) atributo_mm -> GUION . NAME STRING

    PATH            shift and go to state 85
    NAME            shift and go to state 86


state 33

    (25) comando -> UNMOUNT GUION . ID STRING

    ID              shift and go to state 87


state 34

    (26) comando -> MKFS atributos_mkfs .
    (27) atributos_mkfs -> atributos_mkfs . atributosSolo_mkfs
    (29) atributosSolo_mkfs -> . GUION ID STRING
    (30) atributosSolo_mkfs -> . GUION TYPE STRING
    (31) atributosSolo_mkfs -> . GUION FS STRING

    $end            reduce using rule 26 (comando -> MKFS atributos_mkfs .)
    GUION           shift and go to state 36

    atributosSolo_mkfs             shift and go to state 88

state 35

    (28) atributos_mkfs -> atributosSolo_mkfs .

    GUION           reduce using rule 28 (atributos_mkfs -> atributosSolo_mkfs .)
    $end            reduce using rule 28 (atributos_mkfs -> atributosSolo_mkfs .)


state 36

    (29) atributosSolo_mkfs -> GUION . ID STRING
    (30) atributosSolo_mkfs -> GUION . TYPE STRING
    (31) atributosSolo_mkfs -> GUION . FS STRING

    ID              shift and go to state 89
    TYPE            shift and go to state 90
    FS              shift and go to state 91


state 37

    (32) comando -> LOGIN atributos_login .
    (33) atributos_login -> atributos_login . atributosSolo_login
    (35) atributosSolo_login -> . GUION USER STRING
    (36) atributosSolo_login -> . GUION PASS STRING
    (37) atributosSolo_login -> . GUION ID STRING

    $end            reduce using rule 32 (comando -> LOGIN atributos_login .)
    GUION           shift and go to state 39

    atributosSolo_login            shift and go to state 92

state 38

    (34) atributos_login -> atributosSolo_login .

    GUION           reduce using rule 34 (atributos_login -> atributosSolo_login .)
    $end            reduce using rule 34 (atributos_login -> atributosSolo_login .)


state 39

    (35) atributosSolo_login -> GUION . USER STRING
    (36) atributosSolo_login -> GUION . PASS STRING
    (37) atributosSolo_login -> GUION . ID STRING

    USER            shift and go to state 93
    PASS            shift and go to state 94
    ID              shift and go to state 95


state 40

    (39) comando -> MKGRP GUION . NAME STRING

    NAME            shift and go to state 96


state 41

    (40) comando -> RMGRP GUION . NAME STRING

    NAME            shift and go to state 97


state 42

    (41) comando -> MKUSR atributos_mkusr .
    (42) atributos_mkusr -> atributos_mkusr . atributosSolo_mkusr
    (44) atributosSolo_mkusr -> . GUION USER STRING
    (45) atributosSolo_mkusr -> . GUION PASS STRING
    (46) atributosSolo_mkusr -> . GUION GRP STRING

    $end            reduce using rule 41 (comando -> MKUSR atributos_mkusr .)
    GUION           shift and go to state 44

    atributosSolo_mkusr            shift and go to state 98

state 43

    (43) atributos_mkusr -> atributosSolo_mkusr .

    GUION           reduce using rule 43 (atributos_mkusr -> atributosSolo_mkusr .)
    $end            reduce using rule 43 (atributos_mkusr -> atributosSolo_mkusr .)


state 44

    (44) atributosSolo_mkusr -> GUION . USER STRING
    (45) atributosSolo_mkusr -> GUION . PASS STRING
    (46) atributosSolo_mkusr -> GUION . GRP STRING

    USER            shift and go to state 99
    PASS            shift and go to state 100
    GRP             shift and go to state 101


state 45

    (47) comando -> RMUSR GUION . NAME STRING

    NAME            shift and go to state 102


state 46

    (48) comando -> MKFILE atributos_mkfile .
    (49) atributos_mkfile -> atributos_mkfile . atributosSolo_mkfile
    (51) atributosSolo_mkfile -> . GUION PATH DIR
    (52) atributosSolo_mkfile -> . GUION SIZE STRING
    (53) atributosSolo_mkfile -> . GUION CONT STRING
    (54) atributosSolo_mkfile -> . GUION R

    $end            reduce using rule 48 (comando -> MKFILE atributos_mkfile .)
    GUION           shift and go to state 48

    atributosSolo_mkfile           shift and go to state 103

state 47

    (50) atributos_mkfile -> atributosSolo_mkfile .

    GUION           reduce using rule 50 (atributos_mkfile -> atributosSolo_mkfile .)
    $end            reduce using rule 50 (atributos_mkfile -> atributosSolo_mkfile .)


state 48

    (51) atributosSolo_mkfile -> GUION . PATH DIR
    (52) atributosSolo_mkfile -> GUION . SIZE STRING
    (53) atributosSolo_mkfile -> GUION . CONT STRING
    (54) atributosSolo_mkfile -> GUION . R

    PATH            shift and go to state 104
    SIZE            shift and go to state 105
    CONT            shift and go to state 106
    R               shift and go to state 107


state 49

    (55) comando -> CAT listaFilesCAT .
    (56) listaFilesCAT -> listaFilesCAT . atributosSolo_CAT
    (58) atributosSolo_CAT -> . GUION FILE2 STRING
    (59) atributosSolo_CAT -> . GUION FILE1 STRING

    $end            reduce using rule 55 (comando -> CAT listaFilesCAT .)
    GUION           shift and go to state 51

    atributosSolo_CAT              shift and go to state 108

state 50

    (57) listaFilesCAT -> atributosSolo_CAT .

    GUION           reduce using rule 57 (listaFilesCAT -> atributosSolo_CAT .)
    $end            reduce using rule 57 (listaFilesCAT -> atributosSolo_CAT .)


state 51

    (58) atributosSolo_CAT -> GUION . FILE2 STRING
    (59) atributosSolo_CAT -> GUION . FILE1 STRING

    FILE2           shift and go to state 109
    FILE1           shift and go to state 110


state 52

    (60) comando -> REMOVE GUION . PATH DIR

    PATH            shift and go to state 111


state 53

    (61) comando -> EDIT listas_edit .
    (62) listas_edit -> listas_edit . atributosSolo_EDIT
    (64) atributosSolo_EDIT -> . GUION PATH DIR
    (65) atributosSolo_EDIT -> . GUION CONT DIR

    $end            reduce using rule 61 (comando -> EDIT listas_edit .)
    GUION           shift and go to state 55

    atributosSolo_EDIT             shift and go to state 112

state 54

    (63) listas_edit -> atributosSolo_EDIT .

    GUION           reduce using rule 63 (listas_edit -> atributosSolo_EDIT .)
    $end            reduce using rule 63 (listas_edit -> atributosSolo_EDIT .)


state 55

    (64) atributosSolo_EDIT -> GUION . PATH DIR
    (65) atributosSolo_EDIT -> GUION . CONT DIR

    PATH            shift and go to state 113
    CONT            shift and go to state 114


state 56

    (66) comando -> RENAME lista_rename .
    (67) lista_rename -> lista_rename . atributosSolo_RENAME
    (69) atributosSolo_RENAME -> . GUION PATH DIR
    (70) atributosSolo_RENAME -> . GUION NAME STRING

    $end            reduce using rule 66 (comando -> RENAME lista_rename .)
    GUION           shift and go to state 58

    atributosSolo_RENAME           shift and go to state 115

state 57

    (68) lista_rename -> atributosSolo_RENAME .

    GUION           reduce using rule 68 (lista_rename -> atributosSolo_RENAME .)
    $end            reduce using rule 68 (lista_rename -> atributosSolo_RENAME .)


state 58

    (69) atributosSolo_RENAME -> GUION . PATH DIR
    (70) atributosSolo_RENAME -> GUION . NAME STRING

    PATH            shift and go to state 116
    NAME            shift and go to state 117


state 59

    (71) comando -> MKDIR lista_mkdir .
    (72) lista_mkdir -> lista_mkdir . atributosSolo_MKDIR
    (74) atributosSolo_MKDIR -> . GUION PATH DIR
    (75) atributosSolo_MKDIR -> . GUION R

    $end            reduce using rule 71 (comando -> MKDIR lista_mkdir .)
    GUION           shift and go to state 61

    atributosSolo_MKDIR            shift and go to state 118

state 60

    (73) lista_mkdir -> atributosSolo_MKDIR .

    GUION           reduce using rule 73 (lista_mkdir -> atributosSolo_MKDIR .)
    $end            reduce using rule 73 (lista_mkdir -> atributosSolo_MKDIR .)


state 61

    (74) atributosSolo_MKDIR -> GUION . PATH DIR
    (75) atributosSolo_MKDIR -> GUION . R

    PATH            shift and go to state 119
    R               shift and go to state 120


state 62

    (76) comando -> COPY lista_copy .
    (77) lista_copy -> lista_copy . atributosSolo_COPY
    (79) atributosSolo_COPY -> . GUION PATH DIR
    (80) atributosSolo_COPY -> . GUION DESTINO DIR

    $end            reduce using rule 76 (comando -> COPY lista_copy .)
    GUION           shift and go to state 64

    atributosSolo_COPY             shift and go to state 121

state 63

    (78) lista_copy -> atributosSolo_COPY .

    GUION           reduce using rule 78 (lista_copy -> atributosSolo_COPY .)
    $end            reduce using rule 78 (lista_copy -> atributosSolo_COPY .)


state 64

    (79) atributosSolo_COPY -> GUION . PATH DIR
    (80) atributosSolo_COPY -> GUION . DESTINO DIR

    PATH            shift and go to state 122
    DESTINO         shift and go to state 123


state 65

    (81) comando -> EXECUTE GUION . PATH DIR

    PATH            shift and go to state 124


state 66

    (82) comando -> REP lista_rep .
    (83) lista_rep -> lista_rep . atributosSolo_REP
    (85) atributosSolo_REP -> . GUION ID STRING
    (86) atributosSolo_REP -> . GUION PATH DIR
    (87) atributosSolo_REP -> . GUION NAME STRING
    (88) atributosSolo_REP -> . GUION RUTA DIR

    $end            reduce using rule 82 (comando -> REP lista_rep .)
    GUION           shift and go to state 68

    atributosSolo_REP              shift and go to state 125

state 67

    (84) lista_rep -> atributosSolo_REP .

    GUION           reduce using rule 84 (lista_rep -> atributosSolo_REP .)
    $end            reduce using rule 84 (lista_rep -> atributosSolo_REP .)


state 68

    (85) atributosSolo_REP -> GUION . ID STRING
    (86) atributosSolo_REP -> GUION . PATH DIR
    (87) atributosSolo_REP -> GUION . NAME STRING
    (88) atributosSolo_REP -> GUION . RUTA DIR

    ID              shift and go to state 126
    PATH            shift and go to state 127
    NAME            shift and go to state 128
    RUTA            shift and go to state 129


state 69

    (2) atributosm -> atributosm atributom .

    GUION           reduce using rule 2 (atributosm -> atributosm atributom .)
    $end            reduce using rule 2 (atributosm -> atributosm atributom .)


state 70

    (4) atributom -> GUION PATH . DIR

    DIR             shift and go to state 130


state 71

    (5) atributom -> GUION FIT . STRING

    STRING          shift and go to state 131


state 72

    (6) atributom -> GUION UNIT . STRING

    STRING          shift and go to state 132


state 73

    (7) atributom -> GUION SIZE . STRING

    STRING          shift and go to state 133


state 74

    (9) atributos -> atributos atributo .

    GUION           reduce using rule 9 (atributos -> atributos atributo .)
    $end            reduce using rule 9 (atributos -> atributos atributo .)


state 75

    (11) atributo -> GUION PATH . DIR

    DIR             shift and go to state 134


state 76

    (12) atributo -> GUION TYPE . STRING

    STRING          shift and go to state 135


state 77

    (13) atributo -> GUION UNIT . STRING

    STRING          shift and go to state 136


state 78

    (14) atributo -> GUION NAME . STRING

    STRING          shift and go to state 137


state 79

    (15) atributo -> GUION SIZE . STRING

    STRING          shift and go to state 138


state 80

    (16) atributo -> GUION FIT . STRING

    STRING          shift and go to state 139


state 81

    (17) atributo -> GUION ADD . STRING

    STRING          shift and go to state 140


state 82

    (18) atributo -> GUION DELETE .

    GUION           reduce using rule 18 (atributo -> GUION DELETE .)
    $end            reduce using rule 18 (atributo -> GUION DELETE .)


state 83

    (19) comando -> RMDISK GUION PATH . DIR

    DIR             shift and go to state 141


state 84

    (21) atributos_mount -> atributos_mount atributo_mm .

    GUION           reduce using rule 21 (atributos_mount -> atributos_mount atributo_mm .)
    $end            reduce using rule 21 (atributos_mount -> atributos_mount atributo_mm .)


state 85

    (23) atributo_mm -> GUION PATH . DIR

    DIR             shift and go to state 142


state 86

    (24) atributo_mm -> GUION NAME . STRING

    STRING          shift and go to state 143


state 87

    (25) comando -> UNMOUNT GUION ID . STRING

    STRING          shift and go to state 144


state 88

    (27) atributos_mkfs -> atributos_mkfs atributosSolo_mkfs .

    GUION           reduce using rule 27 (atributos_mkfs -> atributos_mkfs atributosSolo_mkfs .)
    $end            reduce using rule 27 (atributos_mkfs -> atributos_mkfs atributosSolo_mkfs .)


state 89

    (29) atributosSolo_mkfs -> GUION ID . STRING

    STRING          shift and go to state 145


state 90

    (30) atributosSolo_mkfs -> GUION TYPE . STRING

    STRING          shift and go to state 146


state 91

    (31) atributosSolo_mkfs -> GUION FS . STRING

    STRING          shift and go to state 147


state 92

    (33) atributos_login -> atributos_login atributosSolo_login .

    GUION           reduce using rule 33 (atributos_login -> atributos_login atributosSolo_login .)
    $end            reduce using rule 33 (atributos_login -> atributos_login atributosSolo_login .)


state 93

    (35) atributosSolo_login -> GUION USER . STRING

    STRING          shift and go to state 148


state 94

    (36) atributosSolo_login -> GUION PASS . STRING

    STRING          shift and go to state 149


state 95

    (37) atributosSolo_login -> GUION ID . STRING

    STRING          shift and go to state 150


state 96

    (39) comando -> MKGRP GUION NAME . STRING

    STRING          shift and go to state 151


state 97

    (40) comando -> RMGRP GUION NAME . STRING

    STRING          shift and go to state 152


state 98

    (42) atributos_mkusr -> atributos_mkusr atributosSolo_mkusr .
